--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		  <groupId>org.la4j</groupId>
+		  <artifactId>la4j</artifactId>
+		  <version>0.4.9</version>
+		</dependency>
 	</dependencies>
 	<build>
 	</build>
